--- a/.github/ISSUE_TEMPLATE/BugReport.yml
+++ b/.github/ISSUE_TEMPLATE/BugReport.yml
@@ -1,12 +1,12 @@
 name: Bug 反馈
-description: 在使用 ClassIsland 集控版的过程中遇到了 Bug 。
+description: 在使用软件的过程中遇到了 Bug 。
 title: 在这里输入你的标题
 labels: ["Bug", "待查看"]
 body:
   - type: markdown
     attributes:
       value: |
-        感谢您进行 Bug 反馈。请在上面的文本框⬆️起一个能够清晰描述您的问题的标题，便于管理者解决您的问题。
+        感谢您进行 Bug 反馈。请在上面的文本框⬆️起一个能够清晰描述您的问题的标题，便于开发者解决您的问题。
         
         > [!important]
         > 重要：如果要提出**多个 Bug** ，请为每一个 Bug 发起一个单独的 Issue 。
@@ -19,18 +19,16 @@ body:
       label: 检查清单
       description: 在开始反馈这个问题之前，请先检查：
       options:
-        - label: 我已更新到最新版 [Release](https://github.com/WilsonHuangDev/bsdnsxx-classisland-mgmt-cfg/releases/latest) ，确认这一 `Bug` 还未被修复。
+        - label: 我已更新到最新版 [Release](https://github.com/WilsonHuangDev/Custom-Text-Display-Tool/releases/latest) ，确认这一 `Bug` 还未被修复。
           required: true
-        - label: 我已在 [Issues](https://github.com/WilsonHuangDev/bsdnsxx-classisland-mgmt-cfg/issues?q=label%3ABug) 中检索，确认这一 `Bug` 未被提交过。
-          required: true
-        - label: 我已知晓并同意，此处仅用于汇报北京师范大学南山附属学校 ClassIsland 集控中存在的问题（关于 ClassIsland 本身的问题应当[在 ClassIsland 仓库发起 `Issue` ](https://github.com/ClassIsland/ClassIsland/issues)）。
+        - label: 我已在 [Issues](https://github.com/WilsonHuangDev/Custom-Text-Display-Tool/issues?q=label%3ABug) 中检索，确认这一 `Bug` 未被提交过。
           required: true
   - type: markdown
     attributes: 
       value: |
         ### Bug 信息
 
-        描述您遇到的 Bug 。您可以附上截图、录屏、日志等材料，便于管理者者追踪问题。
+        描述您遇到的 Bug 。您可以附上截图、录屏、日志等材料，便于开发者者追踪问题。
   - type: textarea
     id: excepted
     attributes:
@@ -61,8 +59,8 @@ body:
     id: app_version
     attributes:
       label: 应用版本
-      description: 您当前使用的 ClassIsland 版本号，可以在【应用设置】->【关于 ClassIsland】中查看。
-      placeholder: 如：1.3.2.0-Firefly-e921904(dev)
+      description: 您当前使用的软件的版本号，可以在软件主窗口的标题栏查看。
+      placeholder: 如：2.7.0.1206
     validations:
       required: true
   - type: checkboxes
