--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -34,4 +34,4 @@ jobs:
       uses: actions/upload-artifact@v4.4.3
       with:
         name: executable
-        path: CustomTextDisplayTool.exe
+        path: dist/CustomTextDisplayTool.exe
