--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -1,9 +1,7 @@
 name: Python-Build
  
 on:
-  push:
-    branches:
-    - main
+  workflow_dispatch:
 
   pull_request:
     branches:
@@ -34,7 +32,7 @@ jobs:
     - name: Upload EXE
       uses: actions/upload-artifact@v4.4.3
       with:
-        name: exe
+        name: Executable
         path: dist/CustomTextDisplayTool.exe
 
     - name: Commit and push the EXE file back to the repository
