--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -47,26 +47,21 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_SIGNING_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa.pub
         chmod 600 ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa.pub
         ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-    - name: Commit and push the onefile EXE to the repository
-      run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add dist/CustomTextDisplayTool.exe
-        git commit -m "Add generated EXE file"
-        git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git main
-      env:
-        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
+        git config --global user.signingkey '~/.ssh/id_rsa.pub'
+        git config --global gpg.format ssh
+        git config --global commit.gpgSign true
 
     - name: Commit and push the EXE to the repository
       run: |
-        mkdir -p CustomTextDisplayTool
+        mkdir -p CustomTextDisplayTool/bin
         cp -r dist/CustomTextDisplayTool/* CustomTextDisplayTool/bin/
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add dist/CustomTextDisplayTool
+        git add dist/CustomTextDisplayTool.exe
         git add CustomTextDisplayTool/bin/
         git commit -m "Add generated EXE file"
         git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git main
