--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -59,7 +59,7 @@ jobs:
 
     - name: Commit and push the EXE to the repository
       run: |
-        mkdir -p CustomTextDisplayTool/bin
+        # mkdir -p CustomTextDisplayTool/bin
         cp -r dist/CustomTextDisplayTool/* CustomTextDisplayTool/bin/
         git add dist/CustomTextDisplayTool.exe
         git add CustomTextDisplayTool/bin/
