--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Build EXE
       run: |
         rm dist -Recurse -Force
-        pyinstaller --onefile -w CustomTextDisplayTool.py
-        pyinstaller -w CustomTextDisplayTool.py
+        pyinstaller --onefile -w -i Assets\icon.ico CustomTextDisplayTool.py
+        pyinstaller -w -i Assets\icon.ico CustomTextDisplayTool.py
 
     - name: Package onefile EXE
       run: |
@@ -77,6 +77,9 @@ jobs:
 
   Release:
     runs-on: windows-latest
+
+    needs:
+      - Build
 
     steps:
     - uses: actions/checkout@v4
