修改工作流配置文件，修复makensis.exe启动失败的问题

--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -107,7 +107,7 @@ jobs:
 
     - name: Create Installer
       run: |
-        NSIS308/makensis.exe NSIS/CustomTextDisplayTool.nsi
+        Start-Process -FilePath 'NSIS308/makensis.exe' -ArgumentList 'NSIS/CustomTextDisplayTool.nsi' -NoNewWindow -Wait
         echo 'Created successfully.'
         cp -r NSIS/CustomTextDisplayTool_Setup.exe release/
 
