修改工作流配置文件，删减不必要的复制操作

--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -92,21 +92,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
   
-    - name: Make dir
+    - name: Make release dir
       run: |
         mkdir release
-        mkdir setup
   
     - name: Download Build Artifact CustomTextDisplayTool-Onefile
       uses: actions/download-artifact@v4.1.8
       with:
         name: CustomTextDisplayTool-Onefile
         path: release
-
-    - name: Copy CustomTextDisplayTool from Repository
-      run: |
-        cp -r CustomTextDisplayTool setup/
-        ls setup -Recurse -Force
 
     - name: Install NSIS
       run: |
