--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -69,10 +69,11 @@ jobs:
         rm CustomTextDisplayTool/Bin -Recurse -Force
         mkdir -p CustomTextDisplayTool/Bin
         cp -r dist/CustomTextDisplayTool/* CustomTextDisplayTool/Bin/
-        git add 'dist/CustomTextDisplayTool.exe'
-        git add 'CustomTextDisplayTool/Bin/'
-        git add 'CustomTextDisplayTool/Bin/_internal/'
-        git add 'CustomTextDisplayTool/Bin/_internal/wx/'
+        ls CustomTextDisplayTool -Recurse -Force
+        git add -v 'dist/CustomTextDisplayTool.exe'
+        git add -v 'CustomTextDisplayTool/Bin/'
+        git add -v 'CustomTextDisplayTool/Bin/_internal/'
+        git add -v 'CustomTextDisplayTool/Bin/_internal/wx/'
         git commit -m "Add generated EXE files"
         git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git main
       env:
