--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -66,10 +66,8 @@ jobs:
 
     - name: Commit and push the EXE to the repository
       run: |
-        rm CustomTextDisplayTool/Bin -Recurse -Force
-        mkdir -p CustomTextDisplayTool/Bin
-        cp -r dist/CustomTextDisplayTool/* CustomTextDisplayTool/Bin/
-        ls CustomTextDisplayTool -Recurse -Force
+        Copy-Item -Path "dist/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin" -Recurse -Force
+        ls CustomTextDisplayTool -Recurse
         git add -v 'dist/CustomTextDisplayTool.exe'
         git add -v 'CustomTextDisplayTool/Bin/'
         git add -v 'CustomTextDisplayTool/Bin/_internal/'
