--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -69,7 +69,7 @@ jobs:
         rm "CustomTextDisplayTool/Bin" -Recurse -Force
         mkdir -p "CustomTextDisplayTool/Bin"
         Copy-Item -Path "dist/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin" -Recurse -Force
-        ls CustomTextDisplayTool -Recurse
+        ls CustomTextDisplayTool -Recurse -Force
         git add -v 'dist/CustomTextDisplayTool.exe' 'CustomTextDisplayTool/Bin/' 'CustomTextDisplayTool/Bin/**/'
         git commit -m "Add generated EXE files"
         git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git main
@@ -87,7 +87,7 @@ jobs:
   
     - name: Make release dir
       run: |
-        mkdir release
+        mkdir -p release
   
     - name: Download Build Artifact CustomTextDisplayTool-Onefile
       uses: actions/download-artifact@v4.1.8
