--- a/.github/ISSUE_TEMPLATE/FeatureRequest.yml
+++ b/.github/ISSUE_TEMPLATE/FeatureRequest.yml
@@ -6,12 +6,12 @@ body:
   - type: markdown
     attributes:
       value: |
-        感谢您贡献您的想法。请在上面的文本框⬆️起一个能够清晰概括此功能的标题，便于管理者了解您的想法。
+        感谢您贡献您的想法。请在上面的文本框⬆️起一个能够清晰概括此功能的标题，便于开发者了解您的想法。
         
         > [!important]
         > 重要：如果您想要提出**多项功能**，请为每一个功能发起一个单独的 Issue 。
         >
-        > 由于管理者时间精力有限，提交的功能请求可能需要比较久的时间才能实现。
+        > 由于开发者时间精力有限，提交的功能请求可能需要比较久的时间才能实现。
   - type: checkboxes
     id: checklist
     attributes:
