--- a/.github/ISSUE_TEMPLATE/OptimizationRequest.yml
+++ b/.github/ISSUE_TEMPLATE/OptimizationRequest.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        感谢您贡献您的想法。请在上面的文本框⬆️起一个能够清晰概括此功能的标题，便于管理者了解您的想法。
+        感谢您贡献您的想法。请在上面的文本框⬆️起一个能够清晰概括此功能的标题，便于开发者了解您的想法。
         
         > [!important]
         > 重要：如果您想要提出**多项功能**，请为每一个功能发起一个单独的 Issue 。
