--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -32,17 +32,17 @@ jobs:
         pyinstaller --onefile -w -i Assets\icon.ico CustomTextDisplayTool.py
         pyinstaller -w -i Assets\icon.ico CustomTextDisplayTool.py
 
-    - name: Package onefile EXE
+    - name: Package portable EXE
       run: |
         cd dist
-        Compress-Archive -Path ./CustomTextDisplayTool.exe -DestinationPath ../CustomTextDisplayTool-Onefile.zip
-        echo 'Successfully packaged "CustomTextDisplayTool-Onefile".'
+        Compress-Archive -Path ./CustomTextDisplayTool.exe -DestinationPath ../CustomTextDisplayTool_Portable.zip
+        echo 'Successfully packaged "CustomTextDisplayTool_Portable".'
 
-    - name: Upload onefile EXE to GitHub Actions
+    - name: Upload portable EXE to GitHub Actions
       uses: actions/upload-artifact@v4
       with:
-        name: CustomTextDisplayTool-Onefile
-        path: CustomTextDisplayTool-Onefile.zip
+        name: CustomTextDisplayTool_Portable
+        path: CustomTextDisplayTool_Portable.zip
 
     - name: Upload EXE to GitHub Actions
       uses: actions/upload-artifact@v4
@@ -70,7 +70,7 @@ jobs:
         mkdir -p "CustomTextDisplayTool/Bin"
         Copy-Item -Path "dist/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin" -Recurse -Force
         ls CustomTextDisplayTool -Recurse -Force
-        git add -v 'dist/CustomTextDisplayTool.exe' 'CustomTextDisplayTool/Bin/' 'CustomTextDisplayTool/Bin/**/'
+        git add -v 'CustomTextDisplayTool/Bin/' 'CustomTextDisplayTool/Bin/**/'
         git commit -m "Add generated EXE files"
         git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git main
       env:
@@ -89,10 +89,10 @@ jobs:
       run: |
         mkdir -p release
   
-    - name: Download Build Artifact CustomTextDisplayTool-Onefile
+    - name: Download Build Artifact CustomTextDisplayTool_Portable
       uses: actions/download-artifact@v4.1.8
       with:
-        name: CustomTextDisplayTool-Onefile
+        name: CustomTextDisplayTool_Portable
         path: release
 
     - name: Install NSIS
@@ -111,11 +111,11 @@ jobs:
         name: CustomTextDisplayTool-Installer
         path: release/CustomTextDisplayTool_Setup.exe
 
-    - name: Calculate checksums
-      run: pwsh .github/workflows/generate-sha256.ps1 release/
-
     - name: Print files from release dir
       run: ls release -Recurse -Force
+
+    - name: Calculate checksums
+      run: pwsh .github/workflows/generate-sha256.ps1 release/
 
     - name: Create Release
       uses: ncipollo/release-action@v1
