修改 Python Build and Release工作流配置文件，添加参数使rm命令在遇到错误时继续执行下一段命令
Signed-off-by: Wilson.Huang <114924470+WilsonHuangDev@users.noreply.github.com>

--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Build EXE
       run: |
-        rm dist -Recurse -Force
+        rm dist -Recurse -Force -ErrorAction Continue
         pyinstaller --onefile -w -i Assets\icon.ico CustomTextDisplayTool.py
         pyinstaller -w -i Assets\icon.ico CustomTextDisplayTool.py
 
@@ -66,7 +66,7 @@ jobs:
 
     - name: Commit and push the EXE to the repository
       run: |
-        rm "CustomTextDisplayTool/Bin" -Recurse -Force
+        rm "CustomTextDisplayTool/Bin" -Recurse -Force -ErrorAction Continue
         mkdir -p "CustomTextDisplayTool/Bin"
         Copy-Item -Path "dist/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin" -Recurse -Force
         ls CustomTextDisplayTool -Recurse -Force
