--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -68,7 +68,7 @@ jobs:
         mkdir -p "CustomTextDisplayTool/Bin"
         Copy-Item -Path "dist/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin" -Recurse -Force
         ls CustomTextDisplayTool -Recurse -Force
-        git add -v 'CustomTextDisplayTool/Bin/' 'CustomTextDisplayTool/Bin/**/'
+        git add -v 'CustomTextDisplayTool/Bin/*' 'CustomTextDisplayTool/Bin/**/'
         git commit -m "Add generated EXE files"
         git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git ${{ github.ref_name }}
       env:
