--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -70,8 +70,10 @@ jobs:
         ls CustomTextDisplayTool -Recurse -Force
         git add -v 'CustomTextDisplayTool\Bin/\*'
         git commit -m "Add generated EXE files"
-        git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git ${{ github.ref_name }}
-        Start-Sleep -Seconds 15
+        git push origin ${{ github.ref_name }}
+        Start-Sleep -Seconds 30
+        git pull origin main
+        Start-Sleep -Seconds 30
       env:
         GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
 
