--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -27,12 +27,12 @@ jobs:
         rm dist -Recurse -Force -ErrorAction Continue
         pyinstaller --onefile -w -i Assets\icon.ico CustomTextDisplayTool.py
         pyinstaller -w -i Assets\icon.ico CustomTextDisplayTool.py
+        pyinstaller -w --distpath dist/CustomTextDisplayTool_bsdnsxx -n CustomTextDisplayTool -i Assets\icon.ico CustomTextDisplayTool_bsdnsxx.py
 
     - name: Package portable EXE
       run: |
         mkdir -p release
-        cd dist
-        Compress-Archive -Path ./CustomTextDisplayTool.exe -DestinationPath ../release/CustomTextDisplayTool_Portable.zip
+        Compress-Archive -Path dist/CustomTextDisplayTool.exe -DestinationPath ../release/CustomTextDisplayTool_Portable.zip
         echo 'Successfully packaged "CustomTextDisplayTool_Portable".'
 
     - name: Upload portable EXE to GitHub Actions
@@ -46,6 +46,34 @@ jobs:
       with:
         name: CustomTextDisplayTool
         path: dist/CustomTextDisplayTool/
+
+    - name: Upload bsdnsxx Customized EXE to GitHub Actions
+      uses: actions/upload-artifact@v4
+      with:
+        name: CustomTextDisplayTool_bsdnsxx
+        path: dist/CustomTextDisplayTool_bsdnsxx/CustomTextDisplayTool/
+
+    - name: Temporary copy the bsdnsxx Customized EXE to the repository
+      run: |
+        rm "CustomTextDisplayTool/Bin" -Recurse -Force -ErrorAction Continue
+        mkdir -p "CustomTextDisplayTool/Bin"
+        Copy-Item -Path "dist/CustomTextDisplayTool_bsdnsxx/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin/" -Recurse -Force
+        ls CustomTextDisplayTool -Recurse -Force
+
+    - name: Install NSIS
+      run: |
+        Start-Process -FilePath 'NSIS\nsis-3.08-setup.exe' -ArgumentList '/S' -NoNewWindow -Wait
+        echo 'Installed successfully.'
+
+    - name: Create Installer
+      run: |
+        Start-Process -FilePath 'C:/Program Files (x86)/NSIS/makensis.exe' -ArgumentList 'NSIS/CustomTextDisplayTool.nsi' -NoNewWindow -Wait
+
+    - name: Upload bsdnsxx Customized Installer to GitHub Actions
+      uses: actions/upload-artifact@v4
+      with:
+        name: CustomTextDisplayTool_bsdnsxx_Installer
+        path: NSIS/CustomTextDisplayTool_Setup.exe
 
     - name: Configure SSH
       run: |
@@ -75,20 +103,16 @@ jobs:
       env:
         GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
 
-    - name: Install NSIS
-      run: |
-        Start-Process -FilePath 'NSIS\nsis-3.08-setup.exe' -ArgumentList '/S' -NoNewWindow -Wait
-        echo 'Installed successfully.'
-
     - name: Create Installer
       run: |
+        rm NSIS/CustomTextDisplayTool_Setup.exe -Force -ErrorAction Continue
         Start-Process -FilePath 'C:/Program Files (x86)/NSIS/makensis.exe' -ArgumentList 'NSIS/CustomTextDisplayTool.nsi' -NoNewWindow -Wait
         cp -r NSIS/CustomTextDisplayTool_Setup.exe release/
 
     - name: Upload Installer to GitHub Actions
       uses: actions/upload-artifact@v4
       with:
-        name: CustomTextDisplayTool-Installer
+        name: CustomTextDisplayTool_Installer
         path: release/CustomTextDisplayTool_Setup.exe
 
     - name: Print files from release dir
