--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -85,7 +85,7 @@ jobs:
         ssh-keyscan github.com >> ~/.ssh/known_hosts
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git config --global user.signingkey '~/.ssh/id_rsa.pub'
+        git config --global user.signingkey '~/.ssh/id_rsa'
         git config --global gpg.format ssh
         git config --global commit.gpgSign true
       env:
