--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -53,17 +53,59 @@ jobs:
         name: CustomTextDisplayTool_bsdnsxx
         path: dist/CustomTextDisplayTool_bsdnsxx/CustomTextDisplayTool/
 
-    - name: Temporary copy the bsdnsxx Customized EXE to the repository
+    - name: Move the EXE to the repository
       run: |
         rm "CustomTextDisplayTool/Bin" -Recurse -Force -ErrorAction Continue
         mkdir -p "CustomTextDisplayTool/Bin"
-        Copy-Item -Path "dist/CustomTextDisplayTool_bsdnsxx/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin/" -Recurse -Force
+        mv -Path "dist/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin/" -Recurse -Force
         ls CustomTextDisplayTool -Recurse -Force
+
+    - name: Configure SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_SIGNING_KEY }}" > ~/.ssh/id_rsa.pub
+        icacls ~/.ssh/id_rsa /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
+        icacls ~/.ssh/id_rsa.pub /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git config --global user.signingkey '~/.ssh/id_rsa.pub'
+        git config --global gpg.format ssh
+        git config --global commit.gpgSign true
+      env:
+        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
+
+    - name: Commit and push the EXE to the repository
+      run: |
+        git add -v 'CustomTextDisplayTool\Bin/\*'
+        git commit -m "Add generated EXE files"
+        git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git ${{ github.ref_name }}
+      env:
+        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
 
     - name: Install NSIS
       run: |
         Start-Process -FilePath 'NSIS\nsis-3.08-setup.exe' -ArgumentList '/S' -NoNewWindow -Wait
         echo 'Installed successfully.'
+
+    - name: Create Installer
+      run: |
+        Start-Process -FilePath 'C:/Program Files (x86)/NSIS/makensis.exe' -ArgumentList 'NSIS/CustomTextDisplayTool.nsi' -NoNewWindow -Wait
+        mv NSIS/CustomTextDisplayTool_Setup.exe release/
+
+    - name: Upload Installer to GitHub Actions
+      uses: actions/upload-artifact@v4
+      with:
+        name: CustomTextDisplayTool_Installer
+        path: release/CustomTextDisplayTool_Setup.exe
+
+    - name: Temporary move the bsdnsxx Customized EXE to the repository
+      run: |
+        rm "CustomTextDisplayTool/Bin" -Recurse -Force -ErrorAction Continue
+        mkdir -p "CustomTextDisplayTool/Bin"
+        mv -Path "dist/CustomTextDisplayTool_bsdnsxx/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin/" -Recurse -Force
+        ls CustomTextDisplayTool -Recurse -Force
 
     - name: Create Installer
       run: |
@@ -74,46 +116,6 @@ jobs:
       with:
         name: CustomTextDisplayTool_bsdnsxx_Installer
         path: NSIS/CustomTextDisplayTool_Setup.exe
-
-    - name: Configure SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_SIGNING_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa.pub
-        icacls ~/.ssh/id_rsa /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
-        icacls ~/.ssh/id_rsa.pub /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
-        ssh-keyscan github.com >> ~/.ssh/known_hosts
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git config --global user.signingkey '~/.ssh/id_rsa'
-        git config --global gpg.format ssh
-        git config --global commit.gpgSign true
-      env:
-        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
-
-    - name: Commit and push the EXE to the repository
-      run: |
-        rm "CustomTextDisplayTool/Bin" -Recurse -Force -ErrorAction Continue
-        mkdir -p "CustomTextDisplayTool/Bin"
-        Copy-Item -Path "dist/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin/" -Recurse -Force
-        ls CustomTextDisplayTool -Recurse -Force
-        git add -v 'CustomTextDisplayTool\Bin/\*'
-        git commit -m "Add generated EXE files"
-        git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git ${{ github.ref_name }}
-      env:
-        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
-
-    - name: Create Installer
-      run: |
-        rm NSIS/CustomTextDisplayTool_Setup.exe -Force -ErrorAction Continue
-        Start-Process -FilePath 'C:/Program Files (x86)/NSIS/makensis.exe' -ArgumentList 'NSIS/CustomTextDisplayTool.nsi' -NoNewWindow -Wait
-        cp -r NSIS/CustomTextDisplayTool_Setup.exe release/
-
-    - name: Upload Installer to GitHub Actions
-      uses: actions/upload-artifact@v4
-      with:
-        name: CustomTextDisplayTool_Installer
-        path: release/CustomTextDisplayTool_Setup.exe
 
     - name: Print files from release dir
       run: ls release -Recurse -Force
