--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 .Python
 build/
 develop-eggs/
+dist/
 downloads/
 eggs/
 .eggs/
@@ -156,6 +157,9 @@ cython_debug/
 .vs/
 *.pyproj
 *.sln
+
+# Github Release
+release/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
