--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -81,8 +81,9 @@ jobs:
         mkdir -p ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         echo "${{ secrets.SSH_SIGNING_KEY }}" > ~/.ssh/id_rsa.pub
-        icacls ~/.ssh/id_rsa /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
-        icacls ~/.ssh/id_rsa.pub /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
+        cd ~/.ssh
+        icacls ./id_rsa /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
+        icacls ./id_rsa.pub /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
         ssh-keyscan github.com >> ~/.ssh/known_hosts
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
