--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -68,7 +68,7 @@ jobs:
         echo "${{ secrets.SSH_SIGNING_KEY }}" > ~/.ssh/id_rsa.pub
         icacls ./id_rsa /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
         icacls ./id_rsa.pub /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
-        ssh-add ~/.ssh/id_rsa
+        ssh-add ./id_rsa
         ssh-keyscan github.com >> ~/.ssh/known_hosts
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
