--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -69,7 +69,7 @@ jobs:
         icacls ./id_rsa /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
         icacls ./id_rsa.pub /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
         Set-Service ssh-agent -StartupType Manual
-        ssh-add ./id_rsa
+        ssh-add
         ssh-keyscan github.com >> ~/.ssh/known_hosts
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
