--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -78,7 +78,7 @@ jobs:
         git config --global gpg.format ssh
         git config --global commit.gpgSign true
       env:
-        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
+        GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
 
     - name: Commit and push the EXE to the repository
       run: |
@@ -86,7 +86,7 @@ jobs:
         git commit -m "Add generated EXE files"
         git push origin ${{ github.ref_name }}
       env:
-        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
+        GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
 
     - name: Install NSIS
       run: |
