--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -62,6 +62,8 @@ jobs:
 
     - name: Commit and push the EXE to the repository
       run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add -A
         git commit -m "Add generated EXE files"
         git push origin ${{ github.ref_name }}
