--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -60,13 +60,32 @@ jobs:
         mv -Path "dist/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin/" -Force
         ls CustomTextDisplayTool -Recurse -Force
 
-    - name: Commit and push the EXE to the repository
+    - name: Configure SSH
       run: |
+        mkdir -p ~/.ssh
+        cd ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_SIGNING_KEY }}" > ~/.ssh/id_rsa.pub
+        icacls ./id_rsa /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
+        icacls ./id_rsa.pub /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
+        Set-Service ssh-agent -StartupType Manual
+        ssh-add
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git config --global user.signingkey '~/.ssh/id_rsa.pub'
+        git config --global gpg.format ssh
+        git config --global commit.gpgSign true
+      env:
+        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
+
+    - name: Commit and push the EXE to the repository
+      run: |
         git add -A
         git commit -m "Add generated EXE files"
         git push origin ${{ github.ref_name }}
+      env:
+        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
 
     - name: Install NSIS
       run: |
