--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -83,7 +83,7 @@ jobs:
       run: |
         git add -A
         git commit -m "Add generated EXE files"
-        git push origin ${{ github.ref_name }}
+        git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git ${{ github.ref_name }}
       env:
         GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
 
