--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -60,33 +60,6 @@ jobs:
         mv -Path "dist/CustomTextDisplayTool/*" -Destination "CustomTextDisplayTool/Bin/" -Force
         ls CustomTextDisplayTool -Recurse -Force
 
-    - name: Configure SSH
-      run: |
-        mkdir -p ~/.ssh
-        cd ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_SIGNING_KEY }}" > ~/.ssh/id_rsa.pub
-        icacls ./id_rsa /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
-        icacls ./id_rsa.pub /inheritance:r /grant:r "$($env:USERNAME):(R,W)"
-        Set-Service ssh-agent -StartupType Manual
-        ssh-add
-        ssh-keyscan github.com >> ~/.ssh/known_hosts
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git config --global user.signingkey '~/.ssh/id_rsa.pub'
-        git config --global gpg.format ssh
-        git config --global commit.gpgSign true
-      env:
-        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
-
-    - name: Commit and push the EXE to the repository
-      run: |
-        git add -A
-        git commit -m "Add generated EXE files"
-        git push git@github.com:WilsonHuangDev/Custom-Text-Display-Tool.git ${{ github.ref_name }}
-      env:
-        GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no'
-
     - name: Install NSIS
       run: |
         Start-Process -FilePath 'NSIS\nsis-3.08-setup.exe' -ArgumentList '/S' -NoNewWindow -Wait
@@ -120,11 +93,10 @@ jobs:
         name: CustomTextDisplayTool_bsdnsxx_Installer
         path: NSIS/CustomTextDisplayTool_Setup.exe
 
-    - name: Print files from release dir
-      run: ls release -Recurse -Force
-
     - name: Calculate checksums
-      run: pwsh .github/workflows/generate-sha256.ps1 release/
+      run: |
+        ls release -Recurse -Force
+        pwsh .github/workflows/generate-sha256.ps1 release/
 
     - name: Create Release
       uses: ncipollo/release-action@v1
