更改Python源代码，取消在标题栏中显示软件版本号

--- a/.github/ISSUE_TEMPLATE/BugReport.yml
+++ b/.github/ISSUE_TEMPLATE/BugReport.yml
@@ -59,8 +59,8 @@ body:
     id: app_version
     attributes:
       label: 应用版本
-      description: 您当前使用的软件的版本号，可以在软件主窗口的标题栏查看。
-      placeholder: 如：2.7.0.1206
+      description: 您当前使用的软件的版本号。
+      placeholder: 如：v2.7.0.1206
     validations:
       required: true
   - type: checkboxes
